Add command line option to genfw
Add command line input for register files.
So run as followings:
	$ genfw s5k4ecgx_evt_1_1.txt

Signed-off-by: Sangwook Lee <sangwook.lee@linaro.org>

--- a/README
+++ b/README
@@ -36,3 +36,6 @@ for s5k4ecgx (5MP Camera) from Samsung
 HOW TO COMPILE
 $ gcc -o genfw genfw.c -lz
 
+$ ./genfw s5k4ecgx_evt1_1.txt
+$ ls -al s5k4ecgx.bin
+
